<resources>
    <string name="app_name">SlidingTiles</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="welcome_please_sign_in">Welcome! Please sign in:</string>
    <string name="don_t_have_an_account_yet_register">Don\'t have an account yet? Register!</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="username">username:</string>
    <string name="welcome_to_sliding_tiles_n_a_puzzle_game_where_you_must_arrange_the_numbers_in_the_correct_order">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="new_game">New Game</string>
    <string name="load_saved_game">Load Saved Game</string>
    <string name="save_game">Save Game</string>
    <string name="sliding_tiles">SLIDING TILES</string>
    <string name="loadText">LOAD SAVED GAME</string>
    <string name="saveText">SAVE GAME</string>
    <string name="newGameText">NEW GAME</string>
    <string name="select_image_from_storage">Select Image from storage</string>
    <string name="select_image_from">Select image from:</string>
    <string name="current_image_selection">current image selection:</string>
    <string name="url">url:</string>
    <string name="select_image_from_gallery">Select Image from gallery</string>
    <string name="download_image_from_url">Download image from url</string>
    <string name="select">Select</string>
    <string name="todo">TODO</string>
    <string name="save">SAVE</string>

</resources>
